--- a/rustynom/Cargo.toml
+++ b/rustynom/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "rustynom"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "rustynom"
 path = "src/lib.rs"
 
 [dependencies]
+fast-float = "0.2.0"
 rustynom_macros = { path = "../rustynom_macros" }
+serde_json = "1.0.117"
